--- a/css/index.css
+++ b/css/index.css
@@ -5,11 +5,16 @@ h1, h2, p, section, header, main, footer {
     padding: 0;
 } 
 
+header {
+    background-color: #0c59cf;
+
+}
+
 header nav .logo {
     font-family: 'Patua One', cursive;
-    font-size: 5rem;
+    font-size: 3.5rem;
     text-align: center;
-    color:black;
+    color:white;
 }
 
 header nav .logo a {
@@ -28,16 +33,16 @@ header nav .menu{
 header nav .menu a {
     text-transform: uppercase;
     text-decoration: none;
-    color: black;
+    color: white;
     border: 1px solid transparent;
     padding: 5px;
 }
 
 header nav .menu a:hover {
-    border: 1px solid black;
+    border: 1px solid white;
 }
 
-@media(min-width: 800px){
+@media(min-width: 950px){
     header nav{
         display: flex;
         align-items: center;
@@ -71,4 +76,20 @@ ul, ol {
     list-style: none;
 }
 
+header div .burger{
+    position: relative;
+    display: block;
+    width: 24px;
+    height: 16px;
+}
 
+header div .burger{
+    padding: 12px 8px;
+    background-color: transparent;
+    border: 0;
+    opacity: 1;
+    -webkit-transition: opacity .2s ease-in-out;
+    transition: opacity .2s ease-in-out;
+    cursor: pointer;
+    color: inherit;
+}
