--- a/css/index.css
+++ b/css/index.css
@@ -4,45 +4,51 @@ h1, h2, p, section, header, main, footer {
     margin: 0;
     padding: 0;
 } 
-
-header {
-    background-color: #0c59cf;
-
-}
-
-header nav .logo {
-    font-family: 'Patua One', cursive;
-    font-size: 3.5rem;
-    text-align: center;
-    color:white;
-}
-
-header nav .logo a {
+ul, ol {
+    list-style: none;
     text-decoration: none;
 }
 
-header nav .menu{
+header .logo {
+    font-family: 'Patua One', cursive;
     display: flex;
-    flex: 1;
-    font-size: 20px;
-    padding: 0;
-    list-style-type: none;
-    justify-content: space-around;
+    justify-content: center;
+    background: #0c59cf;
+    font-size: 3rem;
+    margin-top: -8px;
+    margin-right: -8px;
+    margin-left: -8px;
 }
 
-header nav .menu a {
-    text-transform: uppercase;
+header .logo a {
+    text-decoration: none;
+}
+
+header .graficlogo{
+    color: white;
+}
+
+header nav {
+    margin: auto;
+    min-width: 320px;
+    max-width: 980px;
+    max-height: 100px;
+}
+
+header nav .topnav {
+    background-color: #0c59cf; 
+    margin-left: -8px;
+}
+
+header nav .topnav a {
     text-decoration: none;
     color: white;
-    border: 1px solid transparent;
-    padding: 5px;
+    text-align: center;
+    text-transform: uppercase;
+    margin-left: 8px;
 }
 
-header nav .menu a:hover {
-    border: 1px solid white;
-}
-
-@media(min-width: 950px){
+/*@media(min-width: 950px){
     header nav{
         display: flex;
         align-items: center;
@@ -70,26 +76,5 @@ header section a {
 
 header section span {
     color: #0c59cf;
-}
+}*/
 
-ul, ol {
-    list-style: none;
-}
-
-header div .burger{
-    position: relative;
-    display: block;
-    width: 24px;
-    height: 16px;
-}
-
-header div .burger{
-    padding: 12px 8px;
-    background-color: transparent;
-    border: 0;
-    opacity: 1;
-    -webkit-transition: opacity .2s ease-in-out;
-    transition: opacity .2s ease-in-out;
-    cursor: pointer;
-    color: inherit;
-}
